// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SessionContent component snapshots > empty state — completed + 0 sections 1`] = `
"<div data-v-b8c49044="" class="terminal-chrome">
  <!-- State A: completed + 0 sections → info banner -->
  <div data-v-b8c49044="" class="terminal-empty">
    <div data-v-b8c49044="" class="session-content-banner session-content-banner--info"> Section boundaries were not detected for this session. </div> No content available for this session.
  </div>
</div>"
`;

exports[`SessionContent component snapshots > empty state — processing in progress 1`] = `
"<div data-v-b8c49044="" class="terminal-chrome">
  <!-- Non-terminal status: session is still being processed -->
  <div data-v-b8c49044="" class="terminal-empty"> Session is being processed… </div>
</div>"
`;

exports[`SessionContent component snapshots > error state — failed + 0 sections 1`] = `
"<div data-v-b8c49044="" class="terminal-chrome">
  <!-- State B (failed/interrupted + 0 sections): error-only state -->
  <div data-v-b8c49044="" class="terminal-empty terminal-empty--error"> Session processing failed and no content is available. </div>
</div>"
`;

exports[`SessionContent component snapshots > failed status with sections — shows error banner 1`] = `
"<div data-v-b8c49044="" class="terminal-chrome">
  <div data-v-5d73d589="" data-v-b8c49044="" class="overlay-scrollbar terminal-scroll">
    <div data-v-5d73d589="" class="overlay-scrollbar__viewport">
      <!-- Error banner for failed sessions that have partial sections -->
      <div data-v-b8c49044="" class="session-content-banner session-content-banner--error"> Session processing encountered an error. Showing available content. </div><!-- Virtual mode: absolutely positioned items within a sized container -->
      <!-- Flat mode: render all sections directly -->
      <div data-v-f4ff43c4="" data-v-b8c49044="" class="section-item"><button data-v-a902c83d="" data-v-f4ff43c4="" class="section-header section-header--marker">
          <div data-v-a902c83d="" class="section-header__chevron"><span data-v-a902c83d="" class="icon icon--sm icon-chevron-down"></span></div><span data-v-a902c83d="" class="section-header__label">Partial</span><span data-v-a902c83d="" class="section-header__range">L1–L10 (3&nbsp;lines)</span><span data-v-a902c83d="" class="badge badge--sm section-header__badge badge--secondary">Marker</span>
        </button>
        <div data-v-f4ff43c4="" class="section-content">
          <div data-v-f4ff43c4="" class="section-empty"> No content captured </div>
        </div>
      </div>
    </div>
    <!--v-if-->
  </div>
</div>"
`;

exports[`SessionContent component snapshots > flat mode — two sections render terminal-chrome + overlay scrollbar 1`] = `
"<div data-v-b8c49044="" class="terminal-chrome">
  <div data-v-5d73d589="" data-v-b8c49044="" class="overlay-scrollbar terminal-scroll">
    <div data-v-5d73d589="" class="overlay-scrollbar__viewport">
      <!-- Error banner for failed sessions that have partial sections -->
      <!--v-if-->
      <!-- Virtual mode: absolutely positioned items within a sized container -->
      <!-- Flat mode: render all sections directly -->
      <div data-v-f4ff43c4="" data-v-b8c49044="" class="section-item"><button data-v-a902c83d="" data-v-f4ff43c4="" class="section-header section-header--marker">
          <div data-v-a902c83d="" class="section-header__chevron"><span data-v-a902c83d="" class="icon icon--sm icon-chevron-down"></span></div><span data-v-a902c83d="" class="section-header__label">First</span><span data-v-a902c83d="" class="section-header__range">L1–L10 (5&nbsp;lines)</span><span data-v-a902c83d="" class="badge badge--sm section-header__badge badge--secondary">Marker</span>
        </button>
        <div data-v-f4ff43c4="" class="section-content">
          <div data-v-f4ff43c4="" class="section-empty"> No content captured </div>
        </div>
      </div>
      <div data-v-f4ff43c4="" data-v-b8c49044="" class="section-item"><button data-v-a902c83d="" data-v-f4ff43c4="" class="section-header section-header--marker">
          <div data-v-a902c83d="" class="section-header__chevron"><span data-v-a902c83d="" class="icon icon--sm icon-chevron-down"></span></div><span data-v-a902c83d="" class="section-header__label">Second</span><span data-v-a902c83d="" class="section-header__range">L1–L10 (5&nbsp;lines)</span><span data-v-a902c83d="" class="badge badge--sm section-header__badge badge--secondary">Marker</span>
        </button>
        <div data-v-f4ff43c4="" class="section-content">
          <div data-v-f4ff43c4="" class="section-empty"> No content captured </div>
        </div>
      </div>
    </div>
    <!--v-if-->
  </div>
</div>"
`;

exports[`SessionContent component snapshots > virtual mode — renders virtual container with total height 1`] = `
"<div data-v-b8c49044="" class="terminal-chrome">
  <div data-v-5d73d589="" data-v-b8c49044="" class="overlay-scrollbar terminal-scroll">
    <div data-v-5d73d589="" class="overlay-scrollbar__viewport">
      <!-- Error banner for failed sessions that have partial sections -->
      <!--v-if-->
      <!-- Virtual mode: absolutely positioned items within a sized container -->
      <div data-v-b8c49044="" class="section-virtual-container" style="height: 200px; position: relative;">
        <div data-v-f4ff43c4="" data-v-b8c49044="" class="section-item" data-index="0" style="position: absolute; top: 0px; left: 0px; width: 100%; transform: translateY(0px);"><button data-v-a902c83d="" data-v-f4ff43c4="" class="section-header section-header--marker">
            <div data-v-a902c83d="" class="section-header__chevron"><span data-v-a902c83d="" class="icon icon--sm icon-chevron-down"></span></div><span data-v-a902c83d="" class="section-header__label">First</span><span data-v-a902c83d="" class="section-header__range">L1–L10 (5&nbsp;lines)</span><span data-v-a902c83d="" class="badge badge--sm section-header__badge badge--secondary">Marker</span>
          </button>
          <div data-v-f4ff43c4="" class="section-content">
            <div data-v-f4ff43c4="" class="section-empty"> No content captured </div>
          </div>
        </div>
      </div>
    </div>
    <!--v-if-->
  </div>
</div>"
`;
